# agent-swarm-os

./: .agentsquad.desktop-settings.json  .gitignore  AGENTS.md  AGENT_SQUAD_SKILLS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  SKILLS_QUICK_START.md  TAURI_PORT_SPEC.md  icon-design-philosophy.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
agent-prompts/social-media-agency/: content-librarian.md  content-strategist.md  instagram-curator.md  seo-analytics.md  substack-writer.md  threads-specialist.md  tiktok-creator.md  (+2 more)
dashboard/: CONTRIBUTING.md  Makefile  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE2_SUMMARY.md  PHASE3_PROGRESS.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_PROGRESS.md  PHASE5_PROGRESS.md  PHASE6_PROGRESS.md  QUALITY_IMPROVEMENT_COMPLETE.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_SUMMARY.md  package-lock.json  package.json
dashboard/frontend/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/frontend/src-tauri/capabilities/: main-capability.json
dashboard/frontend/src-tauri/icons/: icon.icns
dashboard/frontend/src-tauri/src/: main.rs
dashboard/frontend/src-tauri/src/commands/: allowlist.rs  mod.rs
scripts/: init-workflow.js  init-workflow.sh  reset-workflow.sh  start.js
templates/: PROGRESS.template.md  instagram-caption-template.md  substack-header-template.md  thread-structure-template.md  youtube-description-template.txt
(+180 files in other folders)
