[package]
name = "agent-swarm-os"
version = "1.0.0"
description = "Agent Swarm OS - Tauri desktop app for Claude Agent Teams"
authors = ["cypher"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "time"] }
url = "2"
walkdir = "2"
which = "8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
